@@ -11,6 +11,7 @@ Comments= <<EOT
 - Add repository https://github.com/ronsavage/Benchmark-Featureset-StopWordLists.git
 - Rename module Benchmark::Featureset::StopWordLists (capital 'W').
 This matches Lingua::EN::StopWordList.
+- Replace Hash::FieldHash with Moo and Types::Standard.
 EOT
 
 [V 1.01]
