@@ -34,16 +34,17 @@ WriteMakefile
 		'Date::Simple' => 3.03,
 		'File::Copy' => 2.21,
 		'File::HomeDir' => 0.99,
-		'Hash::FieldHash' => 0.12,
 		'Lingua::EN::StopWordList' => 1.01,
 		'Lingua::EN::StopWords' => 0.1,
 		'Lingua::StopWords' => 0.09,
 		'Module::Version' => 0.12,
+		'Moo' => 2.000002,
 		'Path::Class' => 0.24,
 		'strict' => 1.04,
 		'Test::More' => 1.001014,
 		'Test::Pod' => 1.48,
 		'Text::Xslate' => 1.5010,
+		'Types::Standard' => 1.000005,
 		'warnings' => 1.12,
 	},
 	VERSION_FROM => 'lib/Benchmark/Featureset/StopWordLists.pm',
