@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Perl Modules for Stop Word Lists</title>
+<title>Perl Modules for Stopword Lists</title>
 <link rel="stylesheet" type="text/css" href="/assets/css/benchmark/featureset/stopwordlists/default.css">
 <link rel="stylesheet" type="text/css" href="/assets/css/benchmark/featureset/stopwordlists/fancy.table.css">
 </head>
@@ -46,7 +46,7 @@ Version
 <!-- Right -->
 <td>
 <div class="last_odd_right">
-1.01
+1.02
 </div>
 </td>
 </tr>
@@ -66,7 +66,7 @@ Version
 <tr>
 <td>1: Lingua::EN::StopWordList</td>
 <td><a href="https://metacpan.org/release/Lingua-EN-StopWordList">Lingua::EN::StopWordList</a></td>
-<td>1.00
+<td>1.01
 </td>
 <td>659</td>
 </tr>
@@ -4281,7 +4281,7 @@ Date
 <!-- Right -->
 <td>
 <div class="odd_right">
-2012-08-20
+2015-08-15
 </div>
 </td>
 </tr>
@@ -4309,7 +4309,7 @@ Perl
 <!-- Right -->
 <td>
 <div class="last_odd_right">
-5.14.2
+5.20.2
 </div>
 </td>
 </tr>
